Actualización 24 Julio: se incluyen  las guías para prácticas, reporte de prácticas y ensayos

--- a/Presentacion Curso Reveal/curso2019-1.html
+++ b/Presentacion Curso Reveal/curso2019-1.html
@@ -212,18 +212,15 @@
 						<p>Se dará un breve repaso de matemáticas como Tema 0, que no será evaluado ni formará parte de la calificación final.</p>
 						<p>
 							<ul>
-								<li class="fragment current-visible">Sistemas de ecuaciones lineales.</li>
-								<li class="fragment current-visible">Ecuaciones cuadráticas.</li>
-								<li class="fragment current-visible">Plano y funciones.</li>
-								<li class="fragment current-visible">Vectores.</li>
+								<li class="fragment fade-down">Sistemas de ecuaciones lineales.</li>
+								<li class="fragment fade-down">Ecuaciones cuadráticas.</li>
+								<li class="fragment fade-down">Plano y funciones.</li>
+								<li class="fragment fade-down">Vectores.</li>
 							</ul>
 						</p>
 					</section>
-					<section data-transition="zoom" data-background="imagenes/estudia_fisica.jpg" data-background-transition="fade-down">
+					<section data-transition="zoom" data-background="imagenes/estudia_fisica.jpg" data-background-transition="fade-down" data-state="dimbg">
 						<h2><span class="textoamarillo">Tema 1. Conceptos básicos</span></h2>
-					</section>
-					<section data-transition="zoom" data-background="#ff6666" data-background-transition="fade-down">
-						<h2>Tema 1. Conceptos básicos</h2>
 						<p>
 							<ol>
 								<li>¿Qué estudia la física?</li>
@@ -237,8 +234,8 @@
 							</ol>
 						</p>
 					</section>
-					<section class="textoamarillo" data-transition="convex" data-background="imagenes/jaula_02.jpg" data-background-transition="zoom">
-						<h2>Tema 2. Electricidad y magnetismo</h2>
+					<section data-transition="convex" data-background="imagenes/jaula_02.jpg" data-background-transition="zoom" data-state="dimbg2">
+						<h2><span class="textoamarillo">Tema 2. Electricidad y magnetismo</span></h2>
 						<ol>
 							<li>Campo y potencial eléctrico.</li>
 							<li>Conductores y aislantes.</li>
@@ -248,8 +245,8 @@
 							<li>Práctica 2. Electroscopio y uso de medidores eléctricos.</li>
 						</ol>
 					</section>
-					<section class="textoamarillo" data-transition="convex" data-background="imagenes/jaula_02.jpg" data-background-transition="zoom">
-						<h2>Tema 2. Electricidad y magnetismo</h2>
+					<section data-transition="convex" data-background="imagenes/jaula_02.jpg" data-background-transition="zoom" data-state="dimbg2">
+						<h2><span class="textoamarillo">Tema 2. Electricidad y magnetismo</span></h2>
 						<ol>
 							<li>Ley de Ampere.</li>
 							<li>Ley de inducción de Faraday.</li>
@@ -259,18 +256,18 @@
 							<li>Potencial de acción.</li>
 						</ol>
 					</section>
-					<section data-transition="concave" data-background="imagenes/lentes.jpg" data-background-transition="slide-in">
-							<h2>Tema 3. Óptica</h2>
+					<section data-transition="concave" data-background="imagenes/lentes.jpg" data-background-transition="slide-in" data-state="dimbg2">
+							<h2><span class="textoamarillo">Tema 3. Óptica</span></h2>
 							<ol>
 								<li>Límites de la óptica geométrica.</li>
 								<li>Leyes de reflexión y refracción.</li>
 								<li>Formación de imágenes en el ojo.</li>
 								<li>Lentes delgadas.</li>
-								<li>Micropscopio y telescopio.</li>
+								<li>Microscopio y telescopio.</li>
 							</ol>
 					</section>
-					<section data-transition="concave" data-background="imagenes/lentes.jpg" data-background-transition="slide-in">
-							<h2>Tema 3. Óptica</h2>
+					<section data-transition="concave" data-background="imagenes/lentes.jpg" data-background-transition="slide-in" data-state="dimbg2">
+						<h2><span class="textoamarillo">Tema 3. Óptica</span></h2>
 							<ol>
 								<li>Práctica 4. Óptica geométrica: caracterización de lentes.</li>
 								<li>Difracción e interferencia.</li>
@@ -278,8 +275,8 @@
 								<li>Espectroscopía.</li>
 							</ol>
 					</section>
-					<section data-transition="zoom" data-background="imagenes/tunel.jpg" data-background-transition="slide-in">
-							<h2>Tema 4. Estructura de la materia</h2>
+					<section data-transition="zoom" data-background="imagenes/tunel.jpg" data-background-transition="slide-in" data-state="dimbg2">
+							<h2><span class="textoamarillo">Tema 4. Estructura de la materia</span></h2>
 							<ol>
 								<li>Modelo de Bohr.</li>
 								<li>Átomo de hidrógeno.</li>
@@ -291,20 +288,20 @@
 								<li>Enlaces químcos.</li>
 							</ol>
 						</section>
-						<section class="textoamarillo" "resize" data-transition="zoom" data-background="imagenes/atomos_03.jpg" data-background-transition="slide-in">
-								<h2>Tema 4. Estructura de la materia</h2>
+						<section data-transition="zoom" data-background="imagenes/atomos_03.jpg" data-background-transition="slide-in" data-state="dimbg2">
+							<h2><span class="textoamarillo">Tema 4. Estructura de la materia</span></h2>
 								<ol start="9">
-								<li>Formación de moléculas.</li>
-								<li>Molécula.</li>
-								<li>Peso molecular.</li>
-								<li>Número de Avogrado.</li>
-								<li>Radiación de cuerpo negro.</li>
-								<li>El núcleo e isótopos.</li>
-								<li>Modelos de Chadwick y Rutherford.</li>
-							</ol>
+									<li>Formación de moléculas.</li>
+									<li>Molécula.</li>
+									<li>Peso molecular.</li>
+									<li>Número de Avogrado.</li>
+									<li>Radiación de cuerpo negro.</li>
+									<li>El núcleo e isótopos.</li>
+									<li>Modelos de Chadwick y Rutherford.</li>
+								</ol>
 					</section>
-					<section class="textoamarillo" "resize" data-transition="zoom" data-background="imagenes/atomos_03.jpg" data-background-transition="slide-in">
-							<h2>Tema 4. Estructura de la materia</h2>
+					<section data-transition="zoom" data-background="imagenes/atomos_03.jpg" data-background-transition="slide-in" data-state="dimbg2">
+						<h2><span class="textoamarillo">Tema 4. Estructura de la materia</span></h2>
 							<ol start="16">
 								<li>Teoría de la radiación</li>
 								<li>Efectos biológicos de la radiación</li>
@@ -312,8 +309,8 @@
 								<li>Biofísica molecular.</li>
 							</ol>
 					</section>
-					<section data-background="imagenes/Cosmos09.jpg" data-transition="slide">
-						<h2>Tema 5. El Universo y la vida</h2>
+					<section data-background="imagenes/Cosmos09.jpg" data-transition="slide" data-state="dimbg2">
+						<h2><span class="textoamarillo">Tema 5. El Universo y la vida</span></h2>
 						<ol>
 							<li>La visión moderna de la estructura del universo.</li>
 							<li>La teoría del "Big Bang".</li>
