Actualización 6 de agosto
Se hacen cambios en el esquema de evaluación, se retiran los ensayos y se incrementa el porcentaje para las tareas.

--- a/Presentacion Curso Reveal/curso2019-1.html
+++ b/Presentacion Curso Reveal/curso2019-1.html
@@ -65,13 +65,13 @@
 					<section>
 						Equipo académico:
 						<ul>
-							<li>M. en C. Gustavo Contreras Mayén</li>
-							<li>M. en C. Abraham Lima Buendía</li>
+							<li>M. en C. Gustavo Contreras Mayén.</li>
+							<li>M. en C. Abraham Lima Buendía.</li>
 						</ul>
 					</section>
 					<section>
 						<h2>Lugar y horario</h2>
-						<p>Pendiente</p>
+						<p>Laboratorio de Física General 1</p>
 						<p>Horario: Martes y Viernes de 11 am a 14 pm.</p>
 					</section>
 				</section>
@@ -103,9 +103,7 @@
 					</section>
 					<section>
 						<h2>Antes de la clase</h2>
-						<p>Para facilitar la discusión en el aula, el alumno revisará antes de la clase el material de trabajo que 
-							se le proporcionará	oportunamente, de tal manera que ya llegará a la misma conociendo el tema a desarrollar 
-							durante la clase.</p>
+						<p>Para facilitar la discusión en el aula, el alumno revisará antes de la clase el material de trabajo que se le proporcionará	oportunamente, de tal manera que ya llegará a la misma conociendo el tema a desarrollar durante la clase.</p>
 						<p>Daremos por entendido de que el alumno realizará la lectura y/o actividades.</p>
 					</section>
 					<section>
@@ -124,16 +122,16 @@
 						<p>Los elementos y la proporción de la calificación del curso que se promediarán al final, se distribuyen de la siguiente manera:</p>
 					</section>
 					<section>
-						<h2><span class="azulnumero">Tareas semanales (30%)</span></h2>
+						<h2><span class="azulnumero">Tareas semanales (50%)</span></h2>
                         <p>Con la finalidad de que el alumno desarrolle la capacidad de solución de problemas, se les proporcionará cada semana, un conjunto de ejercicios que deberá de entregar, la fecha de entrega quedará definida con anticipación, y se avisa que no se recibirán tareas extemporáneas.</p>
                     </section>
 					<section>
-						<h2><span class="azulnumero">Tareas semanales (30%)</span></h2>
+						<h2><span class="azulnumero">Tareas semanales (50%)</span></h2>
                         <p>Las tareas son individuales y se entregarán a mano, es decir, no se recibirán por correo electrónico o memoria usb.</p>
                         <p>Para que una tarea cuente, <i><u>deberán de entregar al menos el 50% de los ejercicios resueltos.</u></i></p>
 					</section>
 					<section>
-						<h2><span class="azulnumero">Exámenes parciales (40%)</span></h2>
+						<h2><span class="azulnumero">Exámenes parciales (30%)</span></h2>
 						<p>Habrá cuatro exámenes parciales en clase, que cubrirán los temas revisados.
                             <ol>
                                 <li>Primer examen parcial: Tema 1. Conceptos básicos.</li>
@@ -143,16 +141,12 @@
                             </ol></p>
 					</section>
 					<section>
-						<h2><span class="azulnumero">Ensayos (10%)</span></h2>
-							<p>El alumno elaborará un ensayo sobre un tema específico del contenido del curso, en donde extenderá los conceptos, ideas, etc. Se avisará oportunamente la fecha de entrega y las características del ensayo..</p>
-					</section>
-					<section>
 						<h2><span class="azulnumero">Prácticas (20%)</span></h2>
 						<p>Por cada práctica que se realice, se entregará un reporte por mesa de trabajo, en donde se discutirán los resultados obtenidos, se proporcionará una guía para implementar cada práctica y una guía general para elaborar el reporte.</p>
 					</section>
 					<section data-background="#ffffb3">
 						<h2>Calificación final</h2>
-                        <p>La calificación final se obtendrá de los porcentajes indicados para las tareas semanales, exámenes parciales, ensayos y prácticas.</p>
+                        <p>La calificación final se obtendrá de los porcentajes indicados para las tareas semanales, exámenes parciales y prácticas.</p>
                         <p>En el caso de obtener un promedio final mayor o igual a 6, será la calificación que se asentará en el acta, siendo la calificación definitiva que obtendría el alumno.</p>
 					</section>
 					<section data-background="#ff9999">
@@ -165,7 +159,6 @@
                             <li class="fragment fade-up">Sólo un examen parcial (de los cuatro) tenga una calificación no aprobatoria, es decir, que la calificación del examen parcial sea menor a 6 (seis)</li>
                             <li class="fragment fade-up">El alumno debió de haber entregado todas las tareas semanales.</li>
                             <li class="fragment fade-up">El alumno debió de haber realizado todas las prácticas y haber entregado los respectivos reportes.</li>
-                            <li class="fragment fade-up">El alumno debió de haber entregado todos los ensayos.</li>
                         </ul>
                     </section>
                     <section data-background="#ff9999">
@@ -180,16 +173,15 @@
 							<li class="fragment fade-down">El alumno presentó y entregó los cuatro exámenes parciales.</li>
 							<li class="fragment fade-down">El alumno entregó todas las tareas del curso.</li>
 							<li class="fragment fade-down">El alumno realizó todas las prácticas y entregó todos los reportes.</li>
-							<li class="fragment fade-down">El alumno entregó todos los ensayos.</li>
 							<li class="fragment fade-down">La calificación de dos exámenes parciales del alumno (o más exámenes parciales) tienen una calificación menor a seis.</li>
 						</ul>
 					</section>
 					<section data-background="#dddddd">
 						<p>En caso de presentar el examen final, la calificación obtenida, es la que se asentará en el acta de calificaciones del curso de Física.</p>
-						<p><b>Ya no se promediará con las tareas semanales ni con las prácticas, ni con los ensayos.</b></p>
+						<p><b>Ya no se promediará con las tareas semanales ni con las prácticas.</b></p>
 					</section>
 					<section data-background="#dddddd">
-						<p>En caso de haber presentado al menos un examen parcial y/o haber entregado al menos una tarea, <u>se promediarán respectivamente las tareas, exámenes, prácticas y ensayos.</u></p>
+						<p>En caso de haber presentado al menos un examen parcial y/o haber entregado al menos una tarea, <u>se promediarán respectivamente las tareas, exámenes y prácticas.</u></p>
 					</section>
 					<section data-background="#dddddd">
 						<p>Sólo se asentará en el acta de calificaciones <span class="rojoalerta">NP</span> si el(la) alumn@ no entrega tarea alguna y no presenta algún examen. (¿?)
