Actualización 7 de agosto de 2018

--- a/Presentacion Curso Reveal/curso2019-1.html
+++ b/Presentacion Curso Reveal/curso2019-1.html
@@ -30,6 +30,9 @@
 			.rojoalerta{
 				color:red;
 			}
+			.aguamarino{
+				color:aquamarine ;
+			}
 			.textoamarillo{
 				color:yellow;
 				font-size: 14em;
@@ -276,8 +279,8 @@
 								<li>Tabla periódica.</li>
 								<li>Peso y número atómico.</li>
 								<li>Valencia.</li>
-								<li>Introducción a las moléculas</li>
-								<li>Enlaces químcos.</li>
+								<li>Introducción a las moléculas.</li>
+								<li>Enlaces químicos.</li>
 							</ol>
 						</section>
 						<section data-transition="zoom" data-background="imagenes/atomos_03.jpg" data-background-transition="slide-in" data-state="dimbg2">
@@ -295,8 +298,8 @@
 					<section data-transition="zoom" data-background="imagenes/atomos_03.jpg" data-background-transition="slide-in" data-state="dimbg2">
 						<h2><span class="textoamarillo">Tema 4. Estructura de la materia</span></h2>
 							<ol start="16">
-								<li>Teoría de la radiación</li>
-								<li>Efectos biológicos de la radiación</li>
+								<li>Teoría de la radiación.</li>
+								<li>Efectos biológicos de la radiación.</li>
 								<li>Práctica 6.</li>
 								<li>Biofísica molecular.</li>
 							</ol>
@@ -316,7 +319,7 @@
 						<h2>Fechas importantes</h2>
 						<ul>
 							<li class="fragment grow">Lunes 6 de agosto. Inicio del semestre 2019-1.</li>
-							<li class="fragment grow"><span class="rojoalerta">Viernes 2 de noviembre. Día de Muertos - Feriado.</span></li>
+							<li class="fragment grow"><span class="aguamarino">Viernes 2 de noviembre. Día de Muertos - Feriado.</span></li>
 							<li class="fragment grow">Viernes 23 de noviembre, Fin de Semestre.</li>
 							<li class="fragment grow"><span class="textoamarillo">Del 26 al 30 de noviembre, primera semana de finales.</span></li>
 							<li class="fragment grow"><span class="textoamarillo">Del 3 al 7 de diciembre,  segunda semana de finales.</span></li>
